; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_content_filter.c_cfil_action_bless_client.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_content_filter.c_cfil_action_bless_client.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cfil_msg_hdr = type { i32 }
%struct.cfil_info = type { i32, i64 }
%struct.cfil_msg_bless_client = type { i32 }
%struct.socket = type { i32, %struct.cfil_info*, i32* }

@ENOENT = common dso_local global i32 0, align 4
@CFM_MAX_OFFSET = common dso_local global i32 0, align 4
@SOF1_CONTENT_FILTER_SKIP = common dso_local global i32 0, align 4
@LOG_ERR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cfil_action_bless_client(i32 %0, %struct.cfil_msg_hdr* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.cfil_msg_hdr*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.cfil_info*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.cfil_msg_bless_client*, align 8
  %9 = alloca %struct.socket*, align 8
  store i32 %0, i32* %3, align 4
  store %struct.cfil_msg_hdr* %1, %struct.cfil_msg_hdr** %4, align 8
  store i32 0, i32* %5, align 4
  store %struct.cfil_info* null, %struct.cfil_info** %6, align 8
  store i32 0, i32* %7, align 4
  %10 = load %struct.cfil_msg_hdr*, %struct.cfil_msg_hdr** %4, align 8
  %11 = bitcast %struct.cfil_msg_hdr* %10 to %struct.cfil_msg_bless_client*
  store %struct.cfil_msg_bless_client* %11, %struct.cfil_msg_bless_client** %8, align 8
  %12 = load %struct.cfil_msg_bless_client*, %struct.cfil_msg_bless_client** %8, align 8
  %13 = getelementptr inbounds %struct.cfil_msg_bless_client, %struct.cfil_msg_bless_client* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call %struct.socket* @cfil_socket_from_client_uuid(i32 %14, i32* %7)
  store %struct.socket* %15, %struct.socket** %9, align 8
  %16 = load %struct.socket*, %struct.socket** %9, align 8
  %17 = icmp eq %struct.socket* %16, null
  br i1 %17, label %18, label %20

18:                                               ; preds = %2
  %19 = load i32, i32* @ENOENT, align 4
  store i32 %19, i32* %5, align 4
  br label %63

20:                                               ; preds = %2
  %21 = load %struct.socket*, %struct.socket** %9, align 8
  %22 = getelementptr inbounds %struct.socket, %struct.socket* %21, i32 0, i32 2
  %23 = load i32*, i32** %22, align 8
  %24 = icmp ne i32* %23, null
  br i1 %24, label %25, label %33

25:                                               ; preds = %20
  %26 = load %struct.socket*, %struct.socket** %9, align 8
  %27 = getelementptr inbounds %struct.socket, %struct.socket* %26, i32 0, i32 2
  %28 = load i32*, i32** %27, align 8
  %29 = load %struct.cfil_msg_hdr*, %struct.cfil_msg_hdr** %4, align 8
  %30 = getelementptr inbounds %struct.cfil_msg_hdr, %struct.cfil_msg_hdr* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = call %struct.cfil_info* @cfil_db_get_cfil_info(i32* %28, i32 %31)
  br label %37

33:                                               ; preds = %20
  %34 = load %struct.socket*, %struct.socket** %9, align 8
  %35 = getelementptr inbounds %struct.socket, %struct.socket* %34, i32 0, i32 1
  %36 = load %struct.cfil_info*, %struct.cfil_info** %35, align 8
  br label %37

37:                                               ; preds = %33, %25
  %38 = phi %struct.cfil_info* [ %32, %25 ], [ %36, %33 ]
  store %struct.cfil_info* %38, %struct.cfil_info** %6, align 8
  %39 = load i32, i32* %7, align 4
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %41, label %54

41:                                               ; preds = %37
  %42 = load %struct.socket*, %struct.socket** %9, align 8
  %43 = load %struct.cfil_info*, %struct.cfil_info** %6, align 8
  %44 = load i32, i32* %3, align 4
  %45 = load i32, i32* @CFM_MAX_OFFSET, align 4
  %46 = load i32, i32* @CFM_MAX_OFFSET, align 4
  %47 = call i32 @cfil_action_data_pass(%struct.socket* %42, %struct.cfil_info* %43, i32 %44, i32 1, i32 %45, i32 %46)
  %48 = load %struct.socket*, %struct.socket** %9, align 8
  %49 = load %struct.cfil_info*, %struct.cfil_info** %6, align 8
  %50 = load i32, i32* %3, align 4
  %51 = load i32, i32* @CFM_MAX_OFFSET, align 4
  %52 = load i32, i32* @CFM_MAX_OFFSET, align 4
  %53 = call i32 @cfil_action_data_pass(%struct.socket* %48, %struct.cfil_info* %49, i32 %50, i32 0, i32 %51, i32 %52)
  br label %60

54:                                               ; preds = %37
  %55 = load i32, i32* @SOF1_CONTENT_FILTER_SKIP, align 4
  %56 = load %struct.socket*, %struct.socket** %9, align 8
  %57 = getelementptr inbounds %struct.socket, %struct.socket* %56, i32 0, i32 0
  %58 = load i32, i32* %57, align 8
  %59 = or i32 %58, %55
  store i32 %59, i32* %57, align 8
  br label %60

60:                                               ; preds = %54, %41
  %61 = load %struct.socket*, %struct.socket** %9, align 8
  %62 = call i32 @socket_unlock(%struct.socket* %61, i32 1)
  br label %63

63:                                               ; preds = %60, %18
  %64 = load i32, i32* %5, align 4
  ret i32 %64
}

declare dso_local %struct.socket* @cfil_socket_from_client_uuid(i32, i32*) #1

declare dso_local %struct.cfil_info* @cfil_db_get_cfil_info(i32*, i32) #1

declare dso_local i32 @cfil_action_data_pass(%struct.socket*, %struct.cfil_info*, i32, i32, i32, i32) #1

declare dso_local i32 @socket_unlock(%struct.socket*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
